fixed main photos and alignment

--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -559,14 +559,15 @@ pre code {
 }
 
 .container {
-  width: 100%;
-  padding-right: 15px;
+  /* width: 100%; */
+  background-size: cover;
+  /* padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto; */
 }
 
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -588,7 +589,7 @@ pre code {
   .container {
     max-width: 1140px;
   }
-}
+} */
 
 .container-fluid {
   width: 100%;
@@ -607,10 +608,19 @@ pre code {
   margin-right: -15px;
   margin-left: -15px;
   margin-bottom: -25px;
+  /* width: 100%; */
+  padding-right: 0%;
+}
+
+.main_photos {
+  width: 100%;
+  /* padding-right: 0%; */
 }
 
 .color-nav {
   background-color: black;
+  /* background-size: cover; */
+  /* width: 100%; */
 }
 
 .log-nav {
@@ -625,6 +635,7 @@ pre code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  padding-right: 0%;
 }
 
 .no-gutters {
@@ -1121,12 +1132,21 @@ pre code {
     flex: 0 0 25%;
     max-width: 25%;
   }
+
   .col-md-4 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.333333%;
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
   }
+
+  .col-md-4-1 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.3%;
+    flex: 0 0 33.3%;
+    max-width: 33.3%;
+  }
+
   .col-md-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.666667%;
@@ -1163,17 +1183,20 @@ pre code {
     flex: 0 0 83.333333%;
     max-width: 83.333333%;
   }
+  
   .col-md-11 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 91.666667%;
     flex: 0 0 91.666667%;
     max-width: 91.666667%;
   }
+
   .col-md-12 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
+    /* padding-right: 0%; */
   }
   .order-md-first {
     -webkit-box-ordinal-group: 0;
@@ -9032,4 +9055,29 @@ a.text-dark:hover, a.text-dark:focus {
 .col-tm-tail-2 {
   flex: 0 0 10%;
   max-width: 10%;
+}
+
+span.tab-space0 {
+  display: inline-block;
+  margin-left: 45px;
+}
+
+span.tab-space1 {
+  display: inline-block;
+  margin-left: 40px;
+}
+
+span.tab-space2 {
+  display: inline-block;
+  margin-left: 60px;
+}
+
+span.tab-space3 {
+  display: inline-block;
+  margin-left: 70px;
+}
+
+span.tab-space4 {
+  display: inline-block;
+  margin-left: 80px;
 }
